; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_xwayland.c_cmd_xwayland.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_xwayland.c_cmd_xwayland.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }
%struct.cmd_results = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"xwayland\00", align 1
@EXPECTED_EQUAL_TO = common dso_local global i32 0, align 4
@SWAY_INFO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [74 x i8] c"Ignoring `xwayland` command, sway hasn't been built with Xwayland support\00", align 1
@CMD_SUCCESS = common dso_local global i32 0, align 4
@CMD_FAILURE = common dso_local global i32 0, align 4
@XWAYLAND_MODE_DISABLED = common dso_local global i32 0, align 4
@XWAYLAND_MODE_IMMEDIATE = common dso_local global i32 0, align 4
@XWAYLAND_MODE_LAZY = common dso_local global i32 0, align 4
@config = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cmd_results* @cmd_xwayland(i32 %0, i8** %1) #0 {
  %3 = alloca %struct.cmd_results*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.cmd_results*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store %struct.cmd_results* null, %struct.cmd_results** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @EXPECTED_EQUAL_TO, align 4
  %9 = call %struct.cmd_results* @checkarg(i32 %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %8, i32 1)
  store %struct.cmd_results* %9, %struct.cmd_results** %6, align 8
  %10 = icmp ne %struct.cmd_results* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load %struct.cmd_results*, %struct.cmd_results** %6, align 8
  store %struct.cmd_results* %12, %struct.cmd_results** %3, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @SWAY_INFO, align 4
  %15 = call i32 @sway_log(i32 %14, i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str.1, i64 0, i64 0))
  %16 = load i32, i32* @CMD_SUCCESS, align 4
  %17 = call %struct.cmd_results* @cmd_results_new(i32 %16, i8* null)
  store %struct.cmd_results* %17, %struct.cmd_results** %3, align 8
  br label %18

18:                                               ; preds = %13, %11
  %19 = load %struct.cmd_results*, %struct.cmd_results** %3, align 8
  ret %struct.cmd_results* %19
}

declare dso_local %struct.cmd_results* @checkarg(i32, i8*, i32, i32) #1

declare dso_local i32 @sway_log(i32, i8*) #1

declare dso_local %struct.cmd_results* @cmd_results_new(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
